Ticket #2309: calculate the estimated number of hits on free text search